syntax = "proto3";

package ClassLibrary.Messages.Protobuf;

import "Classes.proto";

option csharp_namespace = "ClassLibrary.Messages.Protobuf";

message LocalState {
  string PlayerId = 1; // UUIDs are represented as strings in proto
  SyncType Sync = 2;
  repeated ClassLibrary.Messages.Protobuf.Avatar Avatars = 3;
  repeated ClassLibrary.Messages.Protobuf.Projectile Projectiles = 4;
  string EventId = 5;
}

enum SyncType {
  Full = 0;
  Delta = 1;
  Delete = 2;
}